# KAL

./: .gitignore  CMakeLists.txt  docs.md  instruction-set.md  main.c
dev-tools/: boilerplateGenerator.py
include/: Bytecode.h  Compiler.h  Scanner.h  VM.h  common.h  instructions.h  memory.h  mnemonicTokens.h  mnemonicTokens.inc  opcodes.h  opcodes.inc  variants.h  variants.inc  vmHandlers.h  vmHandlers.inc
src/: Bytecode.c  Compiler.c  Scanner.c  VM.c  memory.c
